Unify TeamCity API test framework around core steps and RestClient.
Fix project parent create/list locators, preserve HTTP status after retries, and drop local secrets from tracking.

Co-authored-by: Cursor <cursoragent@cursor.com>